welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: ')' expected but integer literal found.
	if (90 <= n <= <100){
                        ^nearHundred:9: error: illegal start of simple expression
}
^